# bot

./: .replit  COMMIT_EDITMSG  ORIG_HEAD  Pasted-import-discord-from-discord-ext-import-commands-from-discord-import-app-commands-import-logging-impo-1755730823380_1755730823402.txt  Pasted-import-discord-from-discord-ext-import-commands-import-requests-import-io-import-os-import-time-1755791082422_1755791082427.txt  Pasted-make-a-k-template-your-message-to-describe-the-template-you-want-or-discord-categorys-text-voic-1755529201780_1755529201783_1755536392785_1755628494021.txt  _1755628483452.replit  admin.py  afk.py  ai.py  bot.py  bot_1755628682979.py  bot_data.db  bot_data_1755628483455.db  database.py  database_1755628682980.py  fun.py  general.py  image.py  index  main.py  main_1755628483456.py  moderation.py  music.py  package-lock_1755628483459.json  package_1755628483458.json  pyproject.toml  pyproject_1755628483460.toml  replit.md  replit_1755628483461.md  template.py  template_1755536392785_1755628494020.py  template_1755628494019.py  utility.py  utils.py  utils_1755628682970.py  verification.py
